Resume Builder Added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -72,6 +72,7 @@ img{
             <a href="/register" class="btn">Student Registration</a>
             <a href="/stulogin" class="btn">Student Login</a>
             <a href="/teacher_login" class="btn">Teacher Login</a>
+            <a href="/resume" class="btn">Resume Builder</a>
         </div>
     </div>
 </body>
